gif dosyası eklendi

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 body{
     background-color: black;
+    overflow-x: hidden;
 }
 .main{
     background-image: url(images/TR-tr-20231120-popsignuptwoweeks-perspective_alpha_website_large.jpg);
